# Kit_Big_Data_MS2025

./: .buildinfo  .gitignore  .gitignore.save  API_doc.html  README.md  SECURITY.md  alt_requirements.txt  csv_test  df_significatif_test.pkl  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.sh
.devcontainer/: devcontainer.json
.doctrees/: API_doc.doctree  environment.pickle  index.doctree
.github/workflows/: docs.yml  python-app.yml
.streamlit/: config.toml
Backend/: page_review.py  pickle_creation.py  processing_data.py  technique.py
Backend/DataManager/: processing_data.py
Backend/src/: Analyse1.ipynb  a_supprimer.py  add_minutes_to_df.py  cursor.py  cursor_2.ipynb  cursor_script.py  minutes_cursor.ipynb  pickle_creation.py  processing_data.py  technique.py  temps_de_cuisson.py
Backend/tests/: cursor.py  test_pickle_generation.py  test_processing_data.py  test_technique.py  test_temps_de_cuisson.py  test_utils_file_manager.py  tester.ipynb
Backend/utils/: Classe_pickle.py  data_processor.py  file_manager.py
Frontend/: Accueil.py  Classe_pickle.py  POO_notebook.ipynb  Webapp.py  app.py  calendrier.py  recettes.py  season_correlations.pkl  techniques.py  tester.ipynb  webapp_tst.py
Reports/: Projet_kitbigdata.odt  Suivi_BGD.pages  comment_faire_les_analyses.txt
_modules/: index.html
_sources/: API_doc.rst.txt  index.rst.txt
source/: API_doc.rst  conf.py  index.rst
tests/: test_processing_data.py
utils/: __init__.py  file_manager.py
(+36 files in other folders)
