[tool.poetry]
name = "Kit_Big_Data_MS2025"
version = "0.1.0"
description = "Documentation pour le projet KIT_BIG_DATA_MS2025"
authors = ["Cécile <74317560+Cecile-L@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "Backend"},
    { include = "Frontend"}
]

[tool.poetry.dependencies]
python = "3.11.9"
plotly = "^5.24.1"
pathlib = "^1.0.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
streamlit = "^1.40.2"
datetime = "^5.5"
spacy = "3.7.2"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
numpy = "1.23.5"
seaborn = "0.12.2"
matplotlib = "3.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
mypy = "^1.13.0"
tox = "^4.23.2"
streamlit-lottie = "^0.0.5"
pylint = "^3.3.2"
pycodestyle = "^2.12.1"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
coverage = "^7.6.9"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

